hphp/hack/test/typecheck/array_unification/shapes_toarray.php
<?hh

function f(shape('a' => int) $s): dict<string, int> {
  return Shapes::toArray($s);
}
